--- a/15.11a/2h/assets/css/css2h.css
+++ b/15.11a/2h/assets/css/css2h.css
@@ -45,6 +45,7 @@
     background-position: -210px -100px;
     text-align: left;
     float: left;
+   
     margin: 2%;
     margin-top: -1%;
 }
@@ -54,9 +55,12 @@
     width: 50px;
     height: 50px;
     background-position: -705px -45px;
-    opacity: 0.4;
-    
+    opacity: 0.5;
+    float: right;
+    margin-top: -75%;
 }
 .p {
     
+   background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
+    background-repeat: repeat-y; 
 }
