--- a/15.11a/2h/assets/css/css2h.css
+++ b/15.11a/2h/assets/css/css2h.css
@@ -3,11 +3,13 @@
     border: solid 2px;
     margin: 0px;
     border-collapse: collapse;
+    table-layout: auto;
 }
 .td {
     background-color: skyblue;
     text-align: center;
     padding: 0%;
+    
 }
 .h1 {
     color:blue;
@@ -18,6 +20,7 @@
     background-color: gold;
     text-align: left;
     padding: 0%;
+    
 }
 .h2 {
     font-size: 120%;
@@ -26,6 +29,7 @@
 .ul {
     margin-left: -12%;
     color:blue;
+    width: 80%;
 }
 .h3 {
     text-align: center;
@@ -40,27 +44,24 @@
 .img {
     background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
     background-repeat: no-repeat;
-    width: 170px;
+    width: 170px ;
     height: 120px;
     background-position: -210px -100px;
     text-align: left;
     float: left;
-   
-    margin: 2%;
+     margin: 2%;
     margin-top: -1%;
 }
 .img2 {
     background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
     background-repeat: repeat-y;
     width: 50px;
-    height: 50px;
+    height:50px;
     background-position: -705px -45px;
     opacity: 0.5;
     float: right;
-    margin-top: -75%;
 }
 .p {
     
-   background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
-    background-repeat: repeat-y; 
+    clear: right;
 }
