--- a/15.11a/2h/assets/css/css2.3.css
+++ b/15.11a/2h/assets/css/css2.3.css
@@ -1,91 +1,93 @@
 header {
-    width: 800px;
-    height: 47px;
-    background-color: skyblue;
+    min-width: 600px;
+    height: 20%;
+     margin: 0px;
     border-collapse: collapse;
+    table-layout: auto;
+    background-color: skyblue;
+    
 }
 .h1 {
-    color:blue;
+    color: blue;
     text-transform: uppercase;
+    font-size: 120%;
     text-align: center;
-    padding-top: 10px;
-    font-size: 20px
 }
 main {
-    width: 800px;
-    height: 337px;
+    min-width: 600px;
     border-collapse: collapse;
     display: inline-block;
 }
 .aside {
-    width: 199px;
+     width: 199px;
     height: 325px;
     background-color: gold;
     float: left;
-    font-size: large; 
+    font-size: larger;
+    
     
 }
 .h2 {
     font-size: 25px;
     margin-top: 38px;
 }
-.article {
-    width: 601px;
-    height: 325px;
-    float: right;
-    display: block;
-}
 .ul {
    margin-left: -20px;
+}
+.article {
+    width: 70%;
+    height: ;
+    float: left;
+    
+    border-collapse: collapse;
+    table-layout: auto;
+
 }
 .h3 {
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
+    padding: 0%;
+    
 }
 .img {
     background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
     background-repeat: no-repeat;
-    width: 170px ;
+    width: 170px;
     height: 120px;
     background-position: -210px -100px;
+    text-align: left;
     float: left;
-    clear: right;
-    margin: 0px 27px 0px 27px;
-    
+    margin: 2%;
+    margin-top: -1%;
+    margin: 0% 10% 0px 10%;
 }
-.p {
-    font-size: medium;
-    margin-left: 23px;
-}
-.table {
-    border-collapse: collapse;
-}
-
 .img2 {
-    background: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
-     background-repeat: repeat-y;
+    background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/football.png');
+    background-repeat: repeat-y;
     width: 50px;
-    height:50px;
+    height: 50px;
     background-position: -705px -45px;
     opacity: 0.5;
     float: right;
-     margin-top: -305px;
-     
-    
+}
+.p {
+    clear: right;
+    margin-left: 10%;
 }
 footer {
-    width: 800px;
-    height: 65px;
+   min-width: 600px;
+    height: 20%;
+    margin-top: -2%;
+    border-collapse: collapse;
+    table-layout: auto;
     background-color: skyblue;
-    margin-top: -43px;
-   
+    
 }
 .h4 {
     color:blue;
     text-transform: uppercase;
     text-align: center;
-    font-size: 20px;
-    padding: 20px;
+    font-size: 120%;
+    padding: 2%;
     
 }
