--- a/24.11a/1a/assets/css/css1a.css
+++ b/24.11a/1a/assets/css/css1a.css
@@ -1,30 +1,32 @@
 .border6 {
     position: relative;
-    width: 140px;
-    height: 140px;
-    border: solid 6px blue;
-    background-color: green;
+    width: 50px;
+    height: 50px;
+    border: 30px solid black;
+    outline: 10px solid yellow;
     top: 50px;
     left: 50px;
 
 }
+
 .border6::before {
     content: '';
     position: absolute;
-    border: solid 5px red;
-    outline: solid 7px fuchsia;
-    width: 150px;
-    height: 150px;
-    left: -10px;
-    top: -10px;
+    border: 10px solid green;
+    outline: 10px solid blue;
+    width: 130px;
+    height: 130px;
+    left: -50px;
+    top: -50px;
 }
+
 .border6::after {
     content: '';
     position: absolute;
-    border: solid 5px black;
-    outline: solid 7px yellow;
-    width: 60px;
-    height: 60px;
-    left: 35px;
-    top: 35px;
+    border: 10px solid red;
+    outline: 10px solid fuchsia;
+    width: 170px;
+    height: 170px;
+    left: -70px;
+    top: -70px;
 }
