--- a/27.11a/1a/assets/css/css1a2.css
+++ b/27.11a/1a/assets/css/css1a2.css
@@ -2,7 +2,7 @@
   background-color: blue;
   transition: all 2s;
   width: 40vw;
-  height: 40vw;
+  height: 40vh;
   position: absolute;
 }
 .square:nth-of-type(1),.square:nth-of-type(2) {
@@ -27,7 +27,7 @@
     background-color: transparent;
     outline: 10px solid green;
     width: 30vw;
-    height: 30vw;
+    height: 30vh;
   }
   .square:nth-of-type(2),.square:nth-of-type(4) {
     left: 40vw;
